progress on v5 migration